# loftbox-sdk-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: crewai_agent.py  langchain_agent.py  quickstart.py
loftbox/: __init__.py  client.py  errors.py  models.py
loftbox/integrations/: __init__.py  _common.py  crewai.py  langchain.py
tests/: test_client.py  test_integrations.py
