[project]
name = "loftbox"
version = "0.1.0"
description = "LoftBox Python SDK - Email infrastructure for AI agents"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25",
    "pydantic>=2",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.1"]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
