[project]
name = "loftbox"
version = "0.1.0"
description = "LoftBox Python SDK - Email infrastructure for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "LoftBox" }]
keywords = ["email", "ai-agents", "smtp", "inbox", "loftbox"]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://loftbox.net"
Repository = "https://github.com/TheMagicTower/loftbox-sdk-python"

[project.optional-dependencies]
# 프레임워크 통합(LangChain/CrewAI)은 구현 후 추가 — 미구현 광고 금지.
dev = ["pytest>=7", "respx>=0.20", "mypy>=1.8", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loftbox"]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
