[project]
name = "loftbox"
version = "0.3.0"
description = "LoftBox Python SDK - Email infrastructure for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "LoftBox" }]
keywords = ["email", "ai-agents", "smtp", "inbox", "loftbox"]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://loftbox.net"
Repository = "https://github.com/TheMagicTower/loftbox-sdk-python"

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.1"]
# dev 에는 langchain-core 만 포함(테스트용). crewai 는 의존성이 무거워 제외 —
# crewai 통합 테스트는 미설치 시 importorskip 으로 skip 된다.
dev = ["pytest>=7", "respx>=0.20", "mypy>=1.8", "ruff>=0.4", "langchain-core>=0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loftbox"]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
